# rdpwrap

./: .gitignore
bak/res/: rdpwrap.ini.bak
res/: rdpwrap-arm-kb.ini  rdpwrap.ini
src-installer/: RDPWInst.dpr  RDPWInst.dproj  resource.res
src-multiarch/: RDPWrap.sln  RDPWrap.vcxproj  RDPWrap.vcxproj.filters  ReadMe.txt  dllmain.cpp  rdpwrap_core.h  rdpwrap_entry.cpp  rdpwrap_globals.cpp  rdpwrap_hook.cpp  rdpwrap_policy.cpp  rdpwrap_utils.cpp  stdafx.h  targetver.h
src-multiarch/cpp_configparser/: CMakeLists.txt
src-multiarch/cpp_configparser/cmake/: ini_configparserConfig.cmake.in
src-multiarch/cpp_configparser/include/ini/: error.hpp  parser.hpp
src-multiarch/cpp_configparser/src/: parser.cpp
src-multiarch/cpp_configparser/tests/: basic_test.cpp
src-x86-x64-Fusix/: Export.def  IniFile.cpp  IniFile.h  RDPWrap.cpp  RDPWrap.vcxproj  RDPWrap.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h
src-x86-x64-bobo/: RDPWrap.cpp  RDPWrap.vcxproj  ReadMe.txt  dllmain.cpp
